fautes de copie corriger

--- a/autres_projets.html
+++ b/autres_projets.html
@@ -75,7 +75,7 @@
         </nav>         
     </header>
     <h1>Autres projets</h1>
-    <p>Vous d'autres articles qui vous intéresseront sûrement.</p>
+    <p>Vous trouverez d'autres articles qui vous intéressent sûrement.</p>
     <a href=""><p> French Football all time. ( Crée par Yassir )</p></a>
 
     <a href=""><p> What is was to be eighteen ?  ( Crée par Romane ) </p></a>
@@ -113,8 +113,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
