--- a/glossaire.html
+++ b/glossaire.html
@@ -81,17 +81,17 @@
         <h4>Atmosphère :</h4> 
         On appelle « atmosphère » l'enveloppe gazeuse qui entoure certains corps célestes comme, 
         par exemple, la Terre, Vénus ou Mars. Les gaz sont maintenus autour de ces corps célestes par la force 
-        gravitationnelle qui les retient et les empêche de s'échapper vers l'espace.
+        gravitationnelle qui les retient et les empêchent de s'échapper vers l'espace.
         <h4>Gaz à effet de serre :</h4> 
         En matière de climat, l'effet de serre est un phénomène naturel qui contribue 
-        au niveau de température moyen à la surface d'une planète dotée d'une atmosphère.
+        au niveau de température moyenne à la surface d'une planète dotée d'une atmosphère.
         <h4>Gaz fluorés :</h4> 
         Les gaz fluorés sont des gaz d'origine anthropique employés dans une série d'applications 
         industrielles. Ils sont souvent utilisés comme substituts aux substances appauvrissant la couche d'ozone parce 
         qu'ils n'endommagent pas la couche d'ozone atmosphérique.
         <h4>Ultra-violets :</h4> 
         On qualifie de rayonnement ultraviolet (UV), un rayonnement électromagnétique de même 
-        nature que la lumière visible. Toutefois ses longueurs d’onde, comprises entre 20 nm et 400 nm, sont trop courtes 
+        nature que la lumière visible. Toutefois ses longueurs d'onde, comprises entre 20 nm et 400 nm, sont trop courtes 
         pour être perceptibles par l'œil humain. L'énergie que ce rayonnement transporte, en revanche, est d'autant plus 
         importante que la longueur d'onde est faible. Elle peut provoquer des dommages au corps humain.
         <h4>Apartheid :</h4> 
@@ -129,8 +129,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
