--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
             </ul>
         </nav>         
     </header>
-    <h1>Denonciation du monde actuel</h1>
+    <h1>Dénonciation du monde actuel</h1>
     <img class="image_accueil" src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/image accueil.webp" alt="Dessin ou les personnes des pays du Nord gaspillent la nourritures tandis que ceux des pays du sud souffrent.Ils mangent tous ce qu'il peuvent car ils sont affamés, ici on voit qu'ils mangent la planète.">
         <p class="text-l">
-            Voici les différents articles qui coincide tous sur un seul et même thème, 
+            Voici les différents articles qui coïncide tous sur un seul et même thème, 
             les détresses du monde actuel. Nous utiliserons sur ce thème différents 
             types de contenus. Il y aura un article contre une musique, un livre, un lieu, 
             une série, un regret et enfin un espoir.
         </p>
 
 
-    <h2>Une musique interessante</h2> 
+    <h2>Une musique intéressante</h2> 
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/Hakai Img Akuma Album.webp" alt="La pochette de l'Album de l'artiste Hakai">  
     <div class="col-size">
         <br>
         <p class="text-accueil">
             Dans cet article, vous retrouverez la description des paroles de la musique Satellite de Hakai.</p>
-        <p class="text-accueil">Contenu de l’article : Avec ces paroles, l’artiste nous montre que monde est obnubiler par l’argent 
+        <p class="text-accueil">Contenu de l'article : Avec ces paroles, l'artiste nous montre que monde est obnubilé par l'argent 
             et la consommation. On peut peut-être parler même de  consommation de masse.
         </p> 
             <a href="./page_musique.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
@@ -99,15 +99,15 @@
     <br>      
 
 
-    <h2>Le livre pour l’environnement</h2>   
+    <h2>Le livre pour l'environnement</h2>   
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/Livre APPA.webp" alt="Logo APPA, c'est cette institue qui a publiée le livre dont nous pouvons argumenter">
     <div class="col-size">
         <br>
         <p class="text-accueil">
-            Dans cet article, vous retrouverez ma description du livre fait par APPA, son titre est 
-            ”La pollution de l’air”. </p>
-        <p class="text-accueil"> de l’article : Nous allons voir ce que APPA nous apprend 
-            sur la pollution de l’air. Mais vu que le livre date de 1998, nous allons voir les tendances 
+            Dans cet article, vous retrouverez la description du livre fait par APPA, son titre est 
+            ”La pollution de l'air”. </p>
+        <p class="text-accueil"> de l'article : Nous allons voir ce que APPA nous apprend 
+            sur la pollution de l'air. Mais vu que le livre date de 1998, nous allons voir les tendances 
             de cette époque et les comparer avec les tendances actuelles.
         </p> 
             <a href="./page_livre.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
@@ -115,14 +115,14 @@
     </div>  
     <br> 
 
-    <h2>La Série qui résume tout</h2>   
+    <h2>La série qui résume tout</h2>   
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/OnePiece.webp" alt="Dessin de l'équipage au chapeau de paille, ils sont les personnages principaux de l'oeuvre One Piece">
     <div class="col-size">
         <br>
         <p class="text-accueil">
             Dans cet article, vous retrouverez ma description de la série One Piece créée par Eiichirō Oda.</p>
-        <p class="text-accueil">Contenu de l’article : Nous allons voir ce que Oda insinu dans son oeuvre. Il fait pas mal 
-            d’allusions cachés ce qui fait son style intrigant et intéressant de l’oeuvre.
+        <p class="text-accueil">Contenu de l'article : Nous allons voir ce que Oda a insinué dans son œuvre. Il fait pas mal 
+            d'allusions cachées ce qui fait son style intrigant et intéressant de l'œuvre.
         </p> 
             <a href="./page_serie.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
             <br>
@@ -135,9 +135,9 @@
     <div class="col-size">
         <br>
     <p class="text-accueil">
-        Dans cet article, vous retrouverez ma description sur le lieu. Le lieu choisi est l’Afrique du sud.</p>
-    <p class="text-accueil">Contenu de l’article : Nous allons voir pourquoi nous avons choisi ce lieu. L’Afrique Du Sud 
-        est le pays le plus inégalitaires du monde.
+        Dans cet article, vous retrouverez ma description sur le lieu. Le lieu choisi est l'Afrique du sud.</p>
+    <p class="text-accueil">Contenu de l'article : Nous allons voir pourquoi nous avons choisi ce lieu. L'Afrique Du Sud 
+        est le pays le plus inégalitaire du monde.
     </p>
         <a href="./page_lieu.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
         <br>
@@ -145,14 +145,14 @@
     <br>  
 
 
-    <h2>Un grand Espoirs de ce monde</h2>
+    <h2>Un grand espoirs de ce monde</h2>
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/AidesHumanitaires.webp" alt="Photo de personnes qui font partis d'une aides humanitaires avec des sacs de nourritures ">
     <div class="col-size">
         <br>
     <p class="text-accueil">
-        Dans cet article, vous retrouverez ma description sur un espoir de ma génération. Mon espoir c’est 
+        Dans cet article, vous retrouverez ma description sur un espoir de ma génération. Mon espoir c'est 
         les personnes aidant les plus démunies.</p>
-    <p class="text-accueil"> Contenu de l’article : Nous allons énumérer pas mal de systéme pour l’aide aux personnes démunies. 
+    <p class="text-accueil"> Contenu de l'article : Nous allons énumérer pas mal de systéme pour l'aide aux personnes démunies. 
         Notamment avec les associations ou même les cagnottes.        
     </p>
         <a href="./page_espoir.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
@@ -161,15 +161,15 @@
     <br>
 
 
-    <h2>Un Regret de cette génération</h2>
+    <h2>Un regret de cette génération</h2>
     <img src="public/img/page d'accueil/tinify-2022-11-15T14_12_8/MauvaisAccèsRessouces.webp" alt="Image ou l'on voit des personnes pauvres avec un mauvais accès au ressources alimentaires">
     <div class="col-size">
         <br>
     <p class="text-accueil">
         Dans cet article, vous retrouverez ma description sur un regret de ma génération. Mon regret est 
-        sur le thème des inégalités dans le monde alimentairement parlant.</p>
-    <p class="text-accueil">Contenu de l’article : Nous allons énumérer pas mal d’inègalité dans le mondes. Avec le mauvais accès 
-        à l’eau et à la nourriture dans le monde.
+        sur le thème des inégalités dans le monde alimentaire.</p>
+    <p class="text-accueil">Contenu de l'article : Nous allons énumérer pas mal d'inégalités dans le monde. Avec le mauvais accès 
+        à l'eau et à la nourriture dans le monde.
     </p>
         <a href="./page_regret.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
         <br>
@@ -201,8 +201,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
