--- a/page_contact.html
+++ b/page_contact.html
@@ -143,8 +143,8 @@
                     <p class="footer_link">
                         sofiane.mouadeb.70000@gmail.com</a>
                     </p>
-                <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-                <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+                <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+                <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
                 <p>Université Nord Franche-Comté</p>
                 <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
                 <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
