--- a/page_espoir.html
+++ b/page_espoir.html
@@ -74,10 +74,10 @@
             </ul>
         </nav>         
     </header>
-    <h1>Un grand espoirs de ce monde</h1>
+    <h1>Un grand espoir de ce monde</h1>
 <body>
     <p>
-        Nous allons énumérer pas mal de système pour l’aide aux personnes démunies. 
+        Nous allons énumérer pas mal de système pour l'aide aux personnes démunies. 
         Notamment avec les associations ou même les cagnottes.
     </p>
     <p> 
@@ -91,40 +91,40 @@
     </p>
     <h3>Qui est-il ? </h3>
     <p>
-        Coluche était un comédien et un humoriste, né à Paris. Ces prises de paroles 
-        était sont très provocateurs, notamment socialement parlant. En 1981, il annonce 
-        qu’il candidate pour les élections présidentielles mais se retire rapidement. 
-        Tout cela à cause des menaces et pressions.
+        Coluche était un comédien et humoriste, né à Paris. Ces prises de paroles 
+        étaient très provocatrices, notamment socialement parlant. En 1981, il annonce 
+        qu'il candidate pour les élections présidentielles mais se retire rapidement. 
+        Tout cela à cause des menaces et des pressions.
     </p>
     <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="#">
     <p class="text-bottom-img">
-        Photo de Coluche en noir et blanc avec le logo ”Les Restaurants du coeur”
-        en bas à droite de l’image.
+        Photo de Coluche en noir et blanc avec le logo "Les Restaurants du coeur"
+        en bas à droite de l'image.
     </p>
-    <h3>Quel finitions ? </h3>
+    <h3>Quels finitions ? </h3>
     <p>
         Et donc, il fonde en 1985 son association, qui aides les personnes les plus pauvres 
-        et ceux dans le besoin. Il s’était déjà engagé contre la famine en Ethiopie, le
-        gaspillage alimentaire juste pour en citer quelques engagements sociaux. Cette 
-        association a distribuée de 1985 à aujourd’hui, plus de 2,3 milliards de repas. Elle 
+        et ceux dans le besoin. Il s'était déjà engagé contre la famine en Éthiopie, le
+        gaspillage alimentaire juste pour citer quelques engagements sociaux. Cette 
+        association a distribué de 1985 à aujourd'hui, plus de 2,3 milliards de repas. Elle 
         permet aussi a beaucoup de personnes de les aidés pour par exemple, hébergé en urgences 
-        des personnes en très fortes précarités, d’accompagnement dans leur recherches d’emplois 
-        et d’autres aides plus ou moins importantes. Coluche décède en 1986, très rapidement après 
-        la création de son association mais cette association est devenu un monument en France. 
+        des personnes en très fortes précarités, d'accompagnement dans leur recherches d'emplois 
+        et d'autres aides plus ou moins importantes. Coluche décède en 1986, très rapidement après 
+        la création de son association mais cette association est devenue un monument en France. 
     </p>
     <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="#">
-    <p class="text-bottom-img">Image du logo ”Les restaurants du coeur”.</p>
-    <h3>Les autres types d’aides ? </h3>
+    <p class="text-bottom-img">Image du logo "Les restaurants du coeur".</p>
+    <h3>Les autres types d'aides ? </h3>
     <p>
         Il y a aussi les cagnottes qui sont des moyens pour aider des personnes en précarité.
         Mais, il y a des fraudes concernant les cagnottes, et donc le gouvernement commence à 
-        étudié la sécurisation de ces cagnottes qui sont pour la plupart en ligne. Mais tous ce 
-        qui ce passe en interne dans les associations et les cagnottes, nous n’avons pas la 
+        étudié la sécurisation de ces cagnottes qui sont pour la plupart en ligne. Mais tout ce 
+        qui se passe en interne dans les associations et les cagnottes, nous n'avons pas la 
         certitude que notre contribution servira à aider les personnes, ce pour cela que les 
-        différents Etats s’informent pour crées des lois concernant cela. Il y a tous de mêmes 
+        différents États s'informent pour créer des lois concernant cela. Il y a tout de mêmes 
         des vidéos pour découvrir le fonctionnement de plusieurs associations comme par exemple
-        avec la vidéo informative de Michou sur l’association action contre la faim. Je trouve 
-        normal que les personnes s’informe pour voir comment leur argent pourra être transformer 
+        avec la vidéo informative de Michou sur l'association "Action contre" la faim. Je trouve 
+        normal que les personnes s'informe pour voir comment leur argent pourra être transformer 
         pour aider les personnes dans le besoin et ceux dans un besoin extrême. 
     </p>
 
@@ -154,8 +154,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
