--- a/page_musique.html
+++ b/page_musique.html
@@ -55,12 +55,12 @@
             <h1 class="textmenu">Menu</h1>
             <ul>
                 <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li><br>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li><br>
-                <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li><br>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l'environnement</a></li><br>
+                <li><a href="./page_serie.html" style="color: #000000">La série qui résume tout</a></li><br>
                 <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li><br>
-                <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li><br>
-                <li><a href="./page_regret.html" style="color: #000000">Un Regret de cette génération</a></li><br>
-                <li><a href="./autres_projets.html" style="color: #000000">Autres Projets</a></li><br>
+                <li><a href="./page_espoir.html" style="color: #000000">Un grand espoirs de ce monde</a></li><br>
+                <li><a href="./page_regret.html" style="color: #000000">Un regret de cette génération</a></li><br>
+                <li><a href="./autres_projets.html" style="color: #000000">Autres projets</a></li><br>
             </ul>
             <hr width="110%">
             <ul class="ululul">
@@ -74,11 +74,11 @@
             </ul>
         </nav>         
     </header>
-    <h1>Une musique intéressantes</h1>
+    <h1>Une musique intéressante</h1>
 <body>
     <p>
-        Avec ces paroles, l’artiste nous montre que monde est omnibuler par 
-        l’argent et la consommation. On peut peut-être parler même de consommation de masse.
+        Avec ces paroles, l'artiste nous montre que monde est obnubilé par 
+        l'argent et la consommation. On peut peut-être parler même de consommation de masse.
     </p>
     <h3>Les paroles de cette musique</h3>
     <h4>Refrain</h4>
@@ -152,53 +152,53 @@
 
     <a href="https://www.youtube.com/watch?v=ymkgg-b5Dq4"><img src="public/icon/tinify-2022-11-16T10_17_52/musique link.webp" alt="#"></a>
 
-    <h3>Ce qu’il resort de la musique</h3>
+    <h3>Ce qu'il resort de la musique</h3>
     <p>
-        Avec ces paroles, l’artiste nous montre que le monde est omnibuler par l’argent et la 
+        Avec ces paroles, l'artiste nous montre que le monde est obnubilé par l'argent et la 
         consommation on peut peut-être même parler de la consommation de masse. 
         Il y a un emprisonnement de la personne sur son téléphone avec les notifications et il est 
-        aussi un outils de travail car ces notifs montrent aussi son avancement dans son bisness. Les 
-        personnes ne l’appel que pour le bisness et donc pour gagner de l’argent qui montre la consommation de masse.
-        Il a donc une petite passion pour la musique mais son objectif premier c’est de gagner un maximum d’argents.
-        Les gens l’envie avec les notifications qu’il reçoit car c’est l’argent qui vient a lui en quelque sorte. 
-        Ces notifications parle que du business les personnes ne se soucie que de l’argent et non pas de sa personne.
-        Cela montre qu’il a des personnes marre de travailler pour gagnés leur argent quotidiennement. Il montre que les 
-        personnes aiment en quelque sorte ce faire du mal d’où le mot maso’ qui veut dire masochiste. Cela montre qu’il 
-        commence à travailler lorsqu’il sait le montant qu’il gagnera avant de s’y mettre.
+        aussi un outil de travail car ces notifs montrent aussi son avancement dans son business. Les 
+        personnes ne l'appel que pour le business et donc pour gagner de l'argent qui montre la consommation de masse.
+        Il a donc une petite passion pour la musique mais son objectif premier c'est de gagner un maximum d'argent.
+        Les gens l'envie avec les notifications qu'il reçoit car c'est l'argent qui vient a lui en quelque sorte. 
+        Ces notifications parlent que du business les personnes ne se soucie que de l'argent et non pas de sa personne.
+        Cela montre qu'il y a des personnes marre de travailler pour gagner leur argent quotidiennement. Il montre que les 
+        personnes aime en quelque sorte ce faire du mal d'où le mot maso' qui veut dire masochiste. Cela montre qu'il 
+        commence à travailler lorsqu'il sait le montant qu'il gagnera avant de s'y mettre.
     </p>
     <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai rouge et noir.webp" alt="#">
     <p class="text-bottom-img">Image de l'artiste Hakai dans avec une ambiance de rouge sombre et de noir.</p>
     <p>    
-        Il nous montre que la tendance ne fais que de changer et très rapidement. Elle peut changer du jour au lendemain.
-        Un jour tu auras la gloire et du jour au lendemain tous peut s’effondrer.
-        Il veut dire que quand tu seras au plus bas personne sera la viendra t’aider, que cela soit mentalement ou même physiquement.
-        Il ne travaille pas pour consommer des produits mais plutôt à voyager à des endroits paradisiaque.
-        D’après lui les traites qui gagnent de l’argent derrière le dos de leur "amis" sont vraiment ignoble mentalement
-        car tu peux penser que cette personne peut être proches de toi mais ce n’est pas le cas.
-        Cela montre qu’il a vécu avec un traitre qui nous a montré précédemment et qu’il en a marre de se faire trahir
-        par des proches et vu qu’il est vulgaire cela nous accentue son mécontentement par ce type d’actions qu’il déteste.
-        Ensuite, il veut que les traites assument et qu’il arrête de chercher des excuses.
-        Il parle a un traitre, il essais de l’intimidé. Il lui dit pourquoi faire comme si tu n’ as rien a fait alors que tu es
-        le coupable. Et en plus de cela il revient comme si de rien n’était comme s’il était encore son amis.
-        Il ne sait encore s’il y recevra du profit mais il essais ce travaille pour que ces parents se sentent bien et qu’ils
-        peuvent s’offrir tous ce qu’ils veulent.
+        Il nous montre que la tendance ne fait que de changer et très rapidement. Elle peut changer du jour au lendemain.
+        Un jour tu auras la gloire et du jour au lendemain tout peut s'effondrer.
+        Il veut dire que quand tu seras au plus bas personne sera là et viendra t'aider, que cela soit mentalement ou même physiquement. Tu sera seul et
+        Il ne travaille pas pour consommer des produits mais plutôt pour voyager dans des endroits paradisiaques.
+        D'après lui les traîtres qui gagnent de l'argent derrière le dos de leur "amis" sont vraiment ignoble mentalement
+        car tu peux penser que cette personne peut être proche de toi mais ce n'est pas le cas.
+        Cela montre qu'il a vécu avec un traître qui nous a montré précédemment et qu'il en a marre de se faire trahir
+        par des proches et vu qu'il est vulgaire cela nous accentue son mécontentement par ce type d'actions qu'il déteste.
+        Ensuite, il veut que les traître assument et qu'ils arrêtent de chercher des excuses.
+        Il parle a un traître, il essaie de l'intimider. Il lui dit pourquoi faire comme si tu n'as rien a fait alors que tu es
+        le coupable. Et en plus de cela il revient comme si de rien n'était comme s'il était encore son ami.
+        Il ne sait encore s'il y recevra du profit mais il essais ce travaille pour que ces parents se sentent bien et qu'ils
+        peuvent s'offrir tout ce qu'ils veulent.
     </p>  
     <h3>Pour conclure sur la musique</h3>
     <p>
-        On peut voir que le monde est omnibulé par l’argent. Chaque personne veut toujours plus que ce qu’il a 
-        déjà que cela soit pour consommer ou gagner de l’argent. On a vu aussi que le téléphone est un centre 
-        d’intérêt de quasiment toute les personnes. Les personnes deviennent accros à leur téléphone 
-        et l’utilisent aussi comme outils de travail.  On peut voir aussi que les personnes aiment se faire du mal, 
-        ici se lever pour un travail qu’il affectionne pas. On voit aussi de pas mal de personnes qui change complètement 
-        avec le temps. Mais le principal thème de la musique c’est l’argent et en quelque sorte le monde est contrôler par 
-        l’argent. Le monde ne fonctionne qu’avec cela et si tu n’en a pas assez c’est compliquer de vivre, que cela soit 
-        alimentairement ou même en se faisant plaisir en consommant c’est donc quasiment impossible de survivre si tu n’en a pas. 
+        On peut voir que le monde est obnubilé par l'argent. Chaque personne veut toujours plus que ce qu'il a 
+        déjà que cela soit pour consommer ou gagner de l'argent. On a vu aussi que le téléphone est un centre 
+        d'intérêt de quasiment toutes les personnes. Les personnes deviennent accros à leur téléphone 
+        et l'utilisent aussi comme outils de travail.  On peut voir aussi que les personnes aime se faire du mal, 
+        ici se lever pour un travail qu'il affectionne pas. On voit aussi de pas mal de personnes qui change complètement 
+        avec le temps. Mais le principal thème de la musique c'est l'argent et en quelque sorte le monde est contrôler par 
+        l'argent. Le monde ne fonctionne qu'avec cela et si tu n'en a pas assez c'est compliqué de vivre, que cela soit 
+        alimentairement ou même en se faisant plaisir en consommant c'est donc quasiment impossible de survivre si tu n'en a pas. 
     </p>
     <img src="public/img/page musique/tinify-2022-11-15T14_26_19/hakai clip lune.webp" alt="#">
     <p class="text-bottom-img">Photo d'une scène du clip Lune de Hakai</p>
 
     <p>
-        Son dernier album ce nomme “Akuma”, il est un succès pour les auditeurs qui écoutent ce type de musiques qui sont 
+        Son dernier album se nomme “Akuma”, il est un succès pour les auditeurs qui écoutent ce type de musiques qui sont 
         spéciales, elles se propagent et se développent de plus en plus.
     </p>
     <footer>
@@ -226,8 +226,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
