--- a/page_serie.html
+++ b/page_serie.html
@@ -74,53 +74,53 @@
             </ul>
         </nav>         
     </header>
-    <h1>La Série qui résume tout</h1>
+    <h1>La série qui résume tout</h1>
 <body>
     <p>
-        Nous allons voir ce que Oda insinu dans son oeuvre. Il fait pas mal d’allusions 
-        cachés ce qui fait son style intrigant et intéressant de l’oeuvre.
+        Nous allons voir ce que Oda a insinué dans son œuvre. Il fait pas mal d'allusions 
+        cachés ce qui fait son style intrigant et intéressant de l'œuvre.
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" class="opseries" alt="#">
     <p class="text-bottom-img">Logo One Piece</p>
     <p>
         One Piece à été choisi car il y a pas accès au même ressources et aussi les problèmes 
-        écologique à Wano. Il y a le racisme sur île des hommes poissons et sur l’île des Sabaody.
+        écologique à Wano. Il y a le racisme sur l'île des hommes poissons et sur l'île des Sabaody.
     </p>
     <h3>Notre mode de vie néfaste</h3>
     <p>
-        Dans l’anime One Piece, on peut voir beaucoup de d’allusion selon notre mode de consommation 
-        c’est ce que l’on va voir aujourd’hui. Le producteur est Eiichirō Oda, il est aussi le mangaka 
-        du manga. On peut voir notamment dans l’arc Wano Kuni, pas mal de dénonciation concernant notre 
-        mode de vie et comment cela pourrais peut-être ce terminer. 
+        Dans l'anime One Piece, on peut voir beaucoup de d'allusion selon notre mode de consommation 
+        c'est ce que l'on va voir aujourd'hui. Le producteur est Eiichirō Oda, il est aussi le mangaka 
+        du manga. On peut voir notamment dans l'arc Wano Kuni, pas mal de dénonciation concernant notre 
+        mode de vie et comment cela pourrait peut-être se terminer. 
     </p>
-    <h3>Scénario proche de la réalité</h3>
+    <h3>Un scénario proche de la réalité</h3>
     <p>
-        Dans cet arc, il y a pas mal d’inégalités car un pirate a envahi le pays et il contrôle tout, 
-        y compris le trafic d’armes, l’accès à la nourriture et l’eau. Dans le pays des Wa, le trafic 
-        d’arme monopolise beaucoup de l’économie du pays mais qui se font en lieu sûr pour que la 
-        population ne se doute de rien. Le pirate nommé Kaido, essais de faire naitre un régime 
-        autoritaire (il cherche l’obéissance de la population).
+        Dans cet arc, il y a pas mal d'inégalités car un pirate a envahi le pays et il contrôle tout, 
+        y compris le trafic d'armes, l'accès à la nourriture et l'eau. Dans le pays des Wa, le trafic 
+        d'arme monopolise beaucoup de l'économie du pays mais qui se font en lieu sûr pour que la 
+        population ne se doute de rien. Le pirate nommé Kaido, essais de faire naître un régime 
+        autoritaire (il cherche l'obéissance de la population).
     </p>
     <h3>Venons-en aux inégalités et à la pollution</h3>
     <p>
-        Dans ce pays, la capitale est le centre des ressources alimentaires et d’accès à l’eau potable. 
-        Tous les individus vivant dans les autres villes n’ont pas accès aux même ressources que ceux de 
-        la capitale. Ils n’ont pas accès à la nourriture et un accès à l’eau potable. Les autres villages, 
+        Dans ce pays, la capitale est le centre des ressources alimentaires et d'accès à l'eau potable. 
+        Tous les individus vivant dans les autres villes n'ont pas accès aux même ressources que ceux de 
+        la capitale. Ils n'ont pas accès à la nourriture et un accès à l'eau potable. Les autres villages, 
         prennent tous les déchets alimentaires de la capitale des Fleurs. Kaido, à mal industrialisé le pays 
-        car les opposants y travaillent, ce sont donc des esclaves. La pollution de l’air, de l’eau, des terres 
-        et de la nourriture se met vite en place. C’est donc pour cela qu’il y a d’énormes inégalités dans le 
-        pays et surtout dans tous les villages. L’agriculture est complexe dans le pays car les terres sont 
+        car les opposants y travaillent, ce sont donc des esclaves. La pollution de l'air, de l'eau, des terres 
+        et de la nourriture se met vite en place. C'est donc pour cela qu'il y a d'énormes inégalités dans le 
+        pays et surtout dans tous les villages. L'agriculture est complexe dans le pays car les terres sont 
         pollués donc impossible de faire des plantations. Les villages, mangent des poissons qui vivent 
         dans les eaux pollués et donc la population souffrent beaucoup de maladie due au bactéries de 
-        l’alimentation et de l’eau. 
+        l'alimentation et de l'eau. 
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="#">
     <p class="text-bottom-img">Image de pollution atmosphérique dans la série One Piece.</p>
-    <h3>La défense d’autres intérêts</h3>
+    <h3>La défense d'autres intérêts</h3>
     <p>
-        Dans cette série, Oda défend beaucoup de chose. Il fait des allusions aux racismes avec les hommes 
-        poissons qui sont discriminé du fait de leur différences de peaux qui se situe à l’arc de l’île des
-        hommes poissons et aussi sur l’île des Sadonby. Sur l’île des Sabaody, on peut voir des privilégiés 
+        Dans cette série, Oda défend beaucoup de choses. Il fait des allusions aux racismes avec les hommes 
+        poissons qui sont discriminé du fait de leur différences de peaux qui se situe à l'arc de l'île des
+        hommes poissons et aussi sur l'île des Sadonby. Sur l'île des Sabaody, on peut voir des privilégiés 
         qui sont les dragons célestes. Ils utilisent les hommes poissons comme des esclaves, et même aucun 
         humain ne doit lever la main ou mal parler a un dragons célestes sinon il se fait tuer sur le champ. 
     </p>
@@ -128,17 +128,18 @@
     <p class="text-bottom-img">Image de différents homme poisson de la série One Piece.</p>
     <h3>En conclusion de cette article</h3>
     <p>
-        On peut voir que Eiichirō Oda déteste pollution et il est pour l’écologie. Cela coïncide avec mon 
-        livre sur la pollution. Oda est contre l’accès des répartitions de ressources alimentaires inégales. 
-        Il y beaucoup de problèmes écologiques. 
+        On peut voir que Eiichirō Oda déteste la pollution et il est pour l'écologie. Cela coïncide avec mon 
+        livre sur la pollution. Oda est contre l'accès des répartitions de ressources alimentaires inégales. 
+        Il y a beaucoup de problèmes écologiques. 
+        Hormis les problèmes écologiques Oda, a insinué énormément de choses dans son œuvre et il serait impossible de tout retranscrire dans cet article.
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="#">
-    <p class="text-bottom-img">Logo de l’équipage principal de One Piece, nommé les chapeaux de paille.</p>
+    <p class="text-bottom-img">Logo de l'équipage principal de One Piece, nommé les chapeaux de paille.</p>
     <h3>Nous allons voir maintenant la filmographie de Eiichirō Oda</h3>
     <p>
-        Eiichirō Oda, n’a fait que One Piece durant sa carrière qui continue car la série n’est pas achevée. 
-        Il ne ressortira plus rien après One Piece, d’après lui car il consacre toute sa vie et cela fait 
-        plus de 23 ans qu’il publie chaque semaine 1 épisode. Mais, il a publié des films les voici.
+        Eiichirō Oda, n'a fait que One Piece durant sa carrière qui continue car la série n'est pas achevée. 
+        Il ne ressortira plus rien après One Piece, d'après lui car il consacre toute sa vie et cela fait 
+        plus de 23 ans qu'il publie chaque semaine 1 épisode. Mais, il a publié des films, les voici.
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="#">
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="#">
@@ -172,8 +173,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
