--- a/à_propos.html
+++ b/à_propos.html
@@ -76,14 +76,14 @@
     </header>  
     <h1> À propos</h1>
     <H4>
-        Le thème que j’ai choisi est fondé sur mon article sur One Piece car tous mes 
-        autres articles coïncides avec celui-ci. 
-        Dans One Piece, il y a une dénonciation de la pollution ce que j’ai faits avec mon 
+        Le thème que j'ai choisi est fondé sur mon article sur One Piece car tous mes 
+        autres articles coïncident avec celui-ci. 
+        Dans One Piece, il y a une dénonciation de la pollution ce que j'ai faits avec mon 
         article sur mon livre de la BU. 
         Avec le lieu, les espoirs et les regrets, rejoignent One Piece, car il y a du racisme, 
-        de la malnutrition et quelque personnes qui aident les plus précaires. 
+        de la malnutrition et quelques personnes qui aident les plus précaires. 
         Et enfin, ma musique coïncide avec mon thème général du monde actuel avec 
-        l’argent au centre des intérêts, de la consommation de masse, les aléas du renouveau, 
+        l'argent au centre des intérêts, de la consommation de masse, les aléas du renouveau, 
         les personnes accros avec leurs téléphones, ...
     </H4>
 
@@ -113,8 +113,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
