--- a/page_lieu.html
+++ b/page_lieu.html
@@ -77,62 +77,62 @@
     <h1>Le lieu le plus inégalitaire du monde</h1>
 <body>
     <p>
-        Nous allons voir pourquoi nous avons choisi ce lieu. L’Afrique Du Sud 
-        est le pays le plus inégalitaires du monde.
+        Nous allons voir pourquoi nous avons choisi ce lieu. L'Afrique Du Sud 
+        est le pays le plus inégalitaire du monde.
     </p>
     <p> 
-        Afrique du Sud, le pays le plus inégalitaires au monde.
+        Afrique du Sud, le pays le plus inégalitaire au monde.
     </p>
     <h3>Description du lieu</h3>
     <p>
-        Afrique du Sud est le pays le plus inégalitaire du monde. Ces inégalités
-        sont dues notamment par le manque d’aides sociales, d’aides médicales. 
-        Ils souffrent de cela bien avant la crise du Covid 19 donc cela s’empire 
+        L'Afrique du sud est le pays le plus inégalitaire du monde. Ces inégalités
+        sont dues notamment par le manque d'aides sociales, d'aides médicales. 
+        Ils souffrent de cela bien avant la crise du Covid 19 donc cela s'empire 
         de plus en plus de nos jours. La population est divisée en 2 parties, la 
-        population blanches et noires. La population blanche est la population la 
-        plus riche, ce sont les privilégiés. Il y a une répartition pas très équilibrés
-        des richesses dans la population totale de ce pays. En plus de cela, la crise a 
-        ccentuée le taux de chômage donc il y a plus de pauvreté dans le pays. 
+        population blanche et noire. La population blanche sont les plus riches et ils sont 
+        les privilégiés. Il y a une répartition pas très équilibrés
+        des richesses dans la population totale de ce pays. En plus de cela, la crise accentuée
+        le taux de chômage donc il y a plus de pauvreté dans le pays. 
     </p>
     <h3>Pour en savoir plus sur les sources de ces inégalités </h3>
     <p>
-        Toute ces inégalités sont due à l’apartheid qui d’après moi persiste encore aujourd’hui, 
-        mais d’une autre manière. La population noire est dominante dans le pays ils détiennent 
-        70% de la richesse totale du pays alors qu’ils sont que 10% dans le pays sauf ceux qui 
+        Toute ces inégalités sont due à l'apartheid qui d'après moi persiste encore aujourd'hui, 
+        mais d'une autre manière. La population noire est dominante dans le pays ils détiennent 
+        70% de la richesse totale du pays alors qu'ils sont que 10% dans le pays sauf ceux qui 
         sont chômage ne font pas partie de ce pourcentage. Le chômage est de 40% pour les sud-africains 
-        noirs et de 8% pour les sud-africains blancs, donc on peut encore ce sont les privilégié. 
-        La population blanche domine encore car ils gagnent trois plus que la population noire. 
-        Mais il y a aussi cela avec les femmes qui gagnent 30% moins que les hommes quelques soit 
-        leur statut sociale. 
+        noirs et de 8% pour les sud-africains blancs, donc on peut encore voir qu'ils sont privilégiés. 
+        La population blanche domine encore car ils gagnent trois fois plus que la population noire. 
+        Mais il y a aussi cela avec les femmes qui gagnent 30% moins que les hommes quel que soit 
+        leur statut social. 
     </p>
     <h3>Les faiblesses persistent</h3>
     <p>
-        Ce pays n’a toujours pas réussi à être une nation avec une grande cohésion. La population est 
-        divisée, n’a pas accès aux mêmes ressources. Les moyens pour contrer les événements climatiques 
-        sont très faibles qui augmente d’autant plus les inégalités de ce pays. Par exemple 63% d’eau est 
-        utilisé pour l’agriculture en Afrique du Sud. Il y a un manque d’accès à l’eau potable, beaucoup 
-        d’enfants meurent à cause du manque d’eau potable et donc des bactéries. Certains enfants sont 
-        hospitalisés et d’autres décèdent. L’éducation est aussi inégalitaire et très défaillant et donc 
-        cela ne cesse de croitre la pauvreté de ce pays déjà extrêmement inégalitaire. Les infrastructures 
-        liés à l’éducation sont délabrés, les taux de réussite sont fragiles, cela touche énormément 
-        d’établissement même s’il y a des établissement sécurisés cela reste faibles. La population est 
-        en sous-alimentation pour la population noire principalement et d’autres souffrent d’obésité car 
-        ils ont accès aux ressources pas saines, car trop cher et compliqué d’accès pour la majorité de 
+        Ce pays n'a toujours pas réussi à être une nation avec une grande cohésion. La population est 
+        divisée, n'a pas accès aux mêmes ressources. Les moyens pour contrer les événements climatiques 
+        sont très faibles, ce qui augmente d'autant plus les inégalités de ce pays. Par exemple 63% d'eau est 
+        utilisé pour l'agriculture en Afrique du Sud. Il y a un manque d'accès à l'eau potable, beaucoup 
+        d'enfants meurent à cause du manque d'eau potable et donc des bactéries. Certains enfants sont 
+        hospitalisés et d'autres décèdent. L'éducation est aussi inégalitaire et très défaillante et donc 
+        cela ne cesse de croître la pauvreté de ce pays déjà extrêmement inégalitaire. Les infrastructures 
+        liées à l'éducation sont délabrées, les taux de réussite sont fragiles, cela touche énormément 
+        d'établissements même s'il y a des établissement sécurisés cela reste faible. La population est 
+        en sous-alimentation pour la population noire principalement et d'autres souffrent d'obésité car 
+        ils ont accès aux ressources pas saines, car trop cher et compliqué d'accès pour la majorité de 
         la population du pays.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.">
-    <p class="text-bottom-img">Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
+    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo d'un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.">
+    <p class="text-bottom-img">Photo d'un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
     <h3>En conclusion</h3>
     <p>
-        On peut voir que la population est divisée en deux partie, d’un côté la population blanche et de 
-        l’autres les sud-africains noirs. Ils y a beaucoup d’inégalités entre ces deux ensemble, comme 
-        le mauvais accès à l’éducation, la répartition de richesse, les aides médicales, les aides sociales, 
-        le chômage, le genre au travail,…  Mais il y a la mauvaise répartitions des ressources en eau et 
+        On peut voir que la population est divisée en deux partie, d'un côté la population blanche et de 
+        l'autres les sud-africains noirs. Il y a beaucoup d'inégalités entre ces deux ensemble, comme 
+        le mauvais accès à l'éducation, la répartition de richesse, les aides médicales, les aides sociales, 
+        le chômage, le genre au travail,…  Mais il y a une mauvaise répartition des ressources en eau et 
         alimentaire qui pour moi est la chose la plus importante car ils sont beaucoup à mourir de malnutrition 
-        et de maladies due aux bactéries lié à l’eau potable qui un compliqué d’accès pour différentes familles.
+        et de maladies due aux bactéries lié à l'eau potable qui un compliqué d'accès pour différentes familles.
     </p>
     <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.">
-    <p>Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.</p>
+    <p>Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l'Afrique du Sud.</p>
 
     <footer>
         <div class="logo__texte_ms">
@@ -159,8 +159,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
