--- a/page_regret.html
+++ b/page_regret.html
@@ -74,52 +74,52 @@
             </ul>
         </nav>         
     </header>
-    <h1>Un Regrets de cette génération</h1>
+    <h1>Un regrets de cette génération</h1>
 <body>
         
 
     <p>
-        Nous allons énumérer pas mal d’inégalité dans le mondes. Avec le mauvais accès à 
-        l’eau et à la nourriture dans le monde.
+        Nous allons énumérer pas mal d'inégalités dans le monde. Avec le mauvais accès à 
+        l'eau et à la nourriture dans le monde.
     </p>
     <p> 
-        Mon principal regrets sont les inégalités alimentaires dans le monde et l’accès à 
-        l’eau potable. 
+        Mon principal regrets sont les inégalités alimentaires dans le monde et l'accès à 
+        l'eau potable. 
     </p>
-    <h3>Les nombres qui font réfléchir …</h3>
+    <h3>Des nombres qui font réfléchir…</h3>
     <p>
         Il y a énormément de personnes en sous-alimentation sur globe, ils sont de presque 
-        d’un milliard ! Les populations touchées sont l’Asie, l’Afrique, l’Amérique latine 
+        d'un milliard ! Les populations touchées sont l'Asie, l'Afrique, l'Amérique latine 
         et les Caraïbes. En Asie, 500 millions de la population est touchées environ, en 
-        Afrique ils sont environ 230 millions. Alors qu’en Amérique latine et les Caraïbes 
-        sont de 45 millions de personnes qui souffrent de malnutritions. Après, il y a 
-        d’autres personnes qui sont touchés mais ils sont peu nombreux dans leur pays. 
+        Afrique ils sont environ 230 millions. Alors qu'en Amérique latine et les Caraïbes 
+        sont plus de 45 millions de personnes qui souffrent de malnutrition. Après, il y a 
+        d'autres personnes qui sont touchées mais ils sont peu nombreux dans leur pays. 
         Extrêmement de personnes  qui décèdent surtout en Somalie, Ethiopie et au Kenya, 
-        1.7 millions d’enfants sont sous-alimentés gravement. 
+        1.7 millions d'enfants sont sous-alimentés gravement. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="#">
-    <p class="text-bottom-img">Image d’un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.</p>
-    <h3>La crise n’a rien arrangé</h3>
+    <p class="text-bottom-img">Image d'un enfant en sous alimentation, très maigre avec un visage plein de détresse et de fatigue.</p>
+    <h3>La crise n'a rien arrangé</h3>
     <p>
-        La crise du Covid 19 n’a fait qu’accroitre le nombre de personnes ayant un mauvais accès 
+        La crise du Covid 19 n'a fait qu'accroître le nombre de personnes ayant un mauvais accès 
         aux ressources alimentaires. Mais, les ressources halieutiques potables sont pour certains 
-        un luxe, ou ils n’en non pas accès facilement comme nous, avec par exemple les robinets.
+        un luxe, ou ils n'ont pas accès facilement comme nous, avec par exemple les robinets.
     </p>
     <h3>Un mauvais accès à la nutrition et la gaspillage des Européens</h3>
     <p>
-        Ils n'ont pas de l’eau avec abondance, il est même compliquer d’avoir un puit dans les villages. 
-        Et de même la sous-nutrition est liée la consommation d’eau non potable ou de l’eau de mauvaise 
-        qualité. A cause de cela, il y a de plus en plus de maladies et de contagions liées à l’eau non 
-        potable ou d’une médiocre qualité. Alors que dans les pays développés, il y a une surconsommation 
-        d’eau inconsidérables. Ces pays gaspillent des quantités titanesques d’eaux alors que beaucoup de 
-        pays en ont besoins pour boire principalement. Leur hygiènes n’est que secondaire, mais nous 
-        consommons plus qu’il n’en faut. Ils faut d’après moi répartir toute les ressources alimentaires 
-        que nous consommerons pas aux pays les plus démunies. Puis, arrêter de gâcher toute l’eau que nous 
-        utilisons pour ensuite, essayer de transférer de l’eau aux pays qui en ont le plus besoins. 
-        En essayant de trouver des stratégie pour y parvenir. 
+        Ils n'ont pas de l'eau avec abondance, il est même compliqué d'avoir un puits dans les villages. 
+        Et de même la sous-nutrition est liée la consommation d'eau non potable ou de l'eau de mauvaise 
+        qualité. A cause de cela, il y a de plus en plus de maladies et de contagions liées à l'eau non 
+        potable ou d'une médiocre qualité. Alors que dans les pays développés, il y a une surconsommation 
+        d'eau inconsidérable. Ces pays gaspillent des quantités titanesques d'eaux alors que beaucoup de 
+        pays en ont besoin pour boire principalement. Leur hygiènes n'est que secondaire, mais nous 
+        consommons plus qu'il n'en faut. Ils faut d'après moi répartir toute les ressources alimentaires 
+        nous ne consommerons pas dans les pays les plus démunis. Puis, arrêter de gâcher toute l'eau que nous 
+        utilisons pour ensuite, essayer de transférer de l'eau aux pays qui en ont le plus besoin. 
+        En essayant de trouver des stratégies pour y parvenir. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="#">
-    <p class="text-bottom-img">Dessin qui représente la planète qui est un robinet ouvert et que l’eau de planète disparait peu à peu. </p>
+    <p class="text-bottom-img">Dessin qui représente la planète qui est un robinet ouvert et que l'eau de planète disparait peu à peu. </p>
 
 
     <footer>
@@ -147,8 +147,8 @@
                 <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">dépatement MMI de Montbéliard</a></p>
+            <p>Ce projet a été réaliser dans le cadre  d'un exercice pédagogique au 
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">département MMI de Montbéliard</a></p>
             <p>Université Nord Franche-Comté</p>
             <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
